trying to fix card platform label on too narrow screens

--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,10 @@
 	color:white;
 	border-radius:0;
 }
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+html {
+  box-sizing: border-box;
+}
